@@ -25,7 +25,7 @@ int ipmi_sensors_detailed_output (ipmi_sensors_state_data_t *state_data,
                                   const void *sdr_record,
                                   unsigned int sdr_record_len,
 				  uint8_t sensor_number,
-                                  double *reading,
+                                  double *sensor_reading,
                                   int event_message_output_type,
                                   uint16_t sensor_event_bitmask,
                                   char **event_message_list,
